<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<ScrollView

    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/set_edt1"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:textSize="40sp"
            android:hint="@string/sethint"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/settv1"/>
            <Spinner
                android:layout_marginLeft="20dp"
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:theme="@style/SpinnerStyle"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inputchoose"/>
        <EditText
            android:id="@+id/edit_1"
            android:paddingLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/choose1"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edit_2"
            android:paddingLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/choose2"
            android:textSize="20sp"/>
        <com.example.meetingvotesystem.NoScrollListView
            android:id="@+id/listview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </com.example.meetingvotesystem.NoScrollListView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_add"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/add"
                android:layout_marginLeft="2dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="添加选项"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/queren"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="保存并发起投票"
                android:background="@drawable/buttontype"/>
            <Button
                android:id="@+id/quxiao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="仅保存"
                android:layout_marginLeft="20dp"
                android:background="@drawable/buttontype"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

</RelativeLayout>